--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </div>
 
             <div class="navbar-right">
+                <button class="navbar-sign_out_btn bypass-btn">Bypass</button>
                 <button class="navbar-sign_out_btn grayedOut">Sign Out</button>
             </div>
         </div>
