--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <script>
         console.log("Hello World");
     </script>
-    <script type="module" src="./../dist/js/script.js"></script>
+    <script type="module" src="dist/js/script.js"></script>
 </body>
 
 </html>
