--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <section class="not_logged_in">
         <h1>Not Logged In </h1>
         <form class="login_form" method="post">
-            <input type="email" placeholder="Email" />
-            <input type="password" placeholder="Password" />
+            <input id="login_email" type="email" placeholder="Email" />
+            <input id="login_password" type="password" placeholder="Password" />
             <button class="login_btn" type="submit">Login</button>
         </form>
     </section>
