--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
         <div class="post_form_wrapper">
             <form class="add_blog_form">
                 <div class="input_wrapper">
-                    <input class="title_input" type="text" name="title" placeholder="Post Title">
+                    <input class="title_input" type="text" name="title" placeholder=" Post Title">
                 </div>
                 <div>
                     <textarea name="content" class="blog_content" rows="20" placeholder=" Content"></textarea>
                 </div>
                 <div>
                     <button class="add_blog_btn" type="button">Add Blog</button>
+                    <button class="preview_blog_btn" type="button">Preview</button>
                 </div>
             </form>
         </div>
